k8s-scripts/sm-sscm-svc-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-sscm-service
spec:
  selector:
    app: sm-sscm-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
